# Dissertation-code

./: lstm_lm.ipynb  mlstm.py  pyproject.toml  slstm.py  test_xlstm.py  xlstm.ipynb
attempted implementation/: logit_lens.ipynb  notes.txt  plan.md  playground.ipynb  pyproject.toml  run_experiment.py  test_output.txt  xlstm.py
attempted implementation/experiments/: Synthethic_Tasks&Long_Range_Arena.ipynb
logit_lens/: .gitignore  ablation_on_blocks.ipynb  cell_state_f_norm_per_token.ipynb  embeddings_comparison.ipynb  eval_local.py  eval_modal.py  hdbscan_experiment copy.py  hdbscan_experiment.py  hdbscan_results.json  hello.py  input_forget_per_token.ipynb  lm_eval_attempt.ipynb  lm_eval_results.txt  logit_lens.ipynb  logit_lens_torch.ipynb  mistral_attention_visualization.ipynb  mistral_eval_modal.py  notebook_contents.txt  notes.txt  pyproject.toml  squad_curated.json  squad_eval.ipynb  squad_eval.py  squad_eval_modal.py  squad_eval_modal_nocache.py  test.py  test_eval.py  thesis_structure.txt  token_contribution_visualization.ipynb  wikitext-103.ipynb  wikitext-103.py  xlstm_attention_visualization.ipynb  xlstm_cell_state_comparison.ipynb
logit_lens/.ipynb_checkpoints/: input_forget_per_token-checkpoint.ipynb  mistral_attention_visualization-checkpoint.ipynb  xlstm_attention_visualization-checkpoint.ipynb
logit_lens/checked_experiments/: big_text_prompt.txt  cell_state_f_norm_per_token.ipynb  embeddings_comparison.ipynb  hdbscan_experiment.py  hdbscan_results.json  hidden_state_clustering.ipynb  logit_lens.ipynb
logit_lens/squad_results/: predictions.json  (+1 more)
(+15 files in other folders)
